* Full compatibility with MediaWiki 1.19 and forward-compatibility with 1.21.
* Deleted SRF_Settings.php entry point, the main entry point is SemanticResultFormats.php

; New formats

* format media (I8bc7a506)(mwjames)
* format excel (I742699fe) (requires PHPExcel, disabled by default) (Kim Eik)

; New features

* (I3f7407a1) EventCalendar SMWAPI/Ajax integration

; Other improvements and changes

* jquery.tagcanvas increase from 1.18 to 1.20
* jquery.responsiveslides increase from v1.32 to v1.53
* jquery.sparkline increase from 2.0 to 2.1
* d3 increase from d3.vs to d3.v3
* Introduce PHP SRF\ namespaces

; Bug fixes

== SRF 1.8 ==

Released on December 2, 2012.

; Compatibility changes

* Changed minimum MediaWiki version from 1.16 to 1.17.
* Changed minimum Semantic MediaWiki version from 1.7 to 1.8.
* Full compatibility with MediaWiki 1.19 and forward-compatibility with 1.20.
* Changed minimum Validator version from 0.4 to 1.0.
* jqplotbar and jqplotpie format are replaced by jqplotchart format
* SRF_Settings.php has been deprecated (will be removed in 1.9) as entry point, use SemanticResultFormats.php instead

; New formats

* slideshow (written by Stephan Gambke)
* listwidget (bug 37721, I54660c15) (mwjames)
* sparkline format (I911862ce) (mwjames)
* timeseries printer (Ibad00690) (mwjames)
* d3chart format (I4baa7df8) (mwjames)
* jqplotseries format (I3c8847aa) (mwjames)
* jqplotchart format (I3c8847aa) (mwjames)
* incoming format (Ie5be9196) (mwjames)
* syndication feed (atom, rss) (bug 38636, Ia3cdc243) (mwjames)
* dygraphs chart format (Ibac4b753) (mwjames)
* event calendar (Iaff44b71) (mwjames)
* earliest format (written by Jeroen De Dauw, Nischay Nahata)
* latest format (written by Jeroen De Dauw, Nischay Nahata)

; New features

* (Ice7ba7ea) Enable tableview plugin support for timeseries, jqplotseries, and dygraphs format
* (bug 38094) Tag cloud format added 'sphere widget' (mwjames)
* (I6920ae49) Tag cloud format added 'wordcloud widget' (mwjames)