@@ -264,7 +264,10 @@ $messages['en'] = array(
 	'srf_printername_ultree'  => 'Ultree',
 	'srf_printername_oltree'  => 'Oltree',
 	'srf-noparentprop' => 'No parent property given. The tree can not be built without a specified parent property.',
+	'srf-rootinvalid' => '$1 is not a valid page title.',
 	'srf-paramdesc-parent' => 'The property containing the parent page',
+	'srf-paramdesc-root' => 'The root page of the tree',
+	'srf-paramdesc-startlevel' => 'The start level of the tree, e.g. for integrating it into another tree',
 
 	// format "slideshow"
 	'srf-printername-slideshow' => 'SlideShow',
@@ -573,7 +576,10 @@ Synonyms might be representation, or maybe appearance, aspect, facet',
 This is an alias of "tree" {{msg-mw|Srf printername tree}}.',
 	'srf_printername_oltree' => '{{doc-smwformat|oltree}}',
 	'srf-noparentprop' => 'This is an error message. See result format [http://semantic-mediawiki.org/wiki/Help:Tree_format tree] for further information.',
+	'srf-rootinvalid' => 'This is an error message. See result format [http://semantic-mediawiki.org/wiki/Help:Tree_format tree] for further information.',
 	'srf-paramdesc-parent' => '{{doc-paramdesc|parent}}',
+	'srf-paramdesc-root' => '{{doc-paramdesc|root}}',
+	'srf-paramdesc-startlevel' => '{{doc-paramdesc|start level}}',
 	'srf-printername-slideshow' => '{{doc-smwformat|slideshow}}',
 	'srf-paramdesc-delay' => '{{doc-paramdesc|delay}}',
 	'srf-paramdesc-navigation-controls' => '{{doc-paramdesc|nav controls}}',
